product display in shop

--- a/client/src/Resources/css/styles.css
+++ b/client/src/Resources/css/styles.css
@@ -520,7 +520,7 @@ footer .business_info .info {
 }
 
 .card_item_wrapper.grid_bars .image {
-    width: 420px;
+    width: 75%;
     height: 211px;
     border: none;
 
